# statgate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  eval-gate.yml  release.yml
adapters/: deepeval_results.py
docs/: configuration.md  github-action.md  methodology.md
examples/: baseline.jsonl  candidate.jsonl  regression.jsonl  statgate.toml
scripts/: render_assets.py  upsert_comment.py
src/adapters/: junit_xml.py
src/statgate/: __init__.py  __main__.py  cli.py  config.py  errors.py  records.py  sequential_runner.py  verdict.py
src/statgate/adapters/: __init__.py  _shared.py  base.py  csv_.py  jsonl.py  promptfoo.py
src/statgate/core/: __init__.py  bootstrap.py  intervals.py  pairing.py  permutation.py  power.py  sequential.py
src/statgate/report/: __init__.py  errorbar.py  jsonout.py  markdown.py  power_report.py  sequential_report.py  terminal.py
tests/: conftest.py  test_adapters.py  test_bootstrap.py  test_cli.py  test_config.py  test_deepeval_adapter.py  test_intervals.py  test_junit_empty.py  test_junit_xml_adapter.py  test_pairing.py  test_permutation.py  test_power.py  test_properties.py  test_reports.py  test_sequential.py  test_sequential_runner.py  test_verdict.py
tests/fixtures/: deepeval-sample.json  promptfoo_baseline.json  promptfoo_candidate.json  sample-junit.xml
