[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "statgate"
version = "0.1.0"
description = "Statistically calibrated ship or block CI gates for LLM evals"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yashwanth Chimata" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.5",
]
keywords = ["llm", "evals", "ci", "statistics", "testing", "quality-gate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
statgate = "statgate.cli:main"

[project.urls]
Homepage = "https://github.com/yashchimata/statgate"
Repository = "https://github.com/yashchimata/statgate"
Issues = "https://github.com/yashchimata/statgate/issues"
Changelog = "https://github.com/yashchimata/statgate/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/statgate"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "docs", "examples", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR0915"]

[tool.mypy]
strict = true
files = ["src"]
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error"]
